Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-2176

TSHttpTxnCacheLookupSkip doesn't work

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 4.1.2
    • TS API
    • None

    Description

      When is_request_cache_lookupable reads the value of api_skip_cache_lookup it also resets the value to false.

      Since the function is called from HandleRequest, the flag set by the API call will be ignored by DecideCacheLookup.

      Attachments

        1. ts2176_api_skip_cache_lookup.patch
          0.7 kB
          Corey Cossentino

        Issue Links

          Activity

            People

              jamespeach James Peach
              dennovin Corey Cossentino
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: