TS-2176: do not reset value of api_skip_cache_lookup when reading it

When is_request_cache_lookupable reads the value of api_skip_cache_lookup
it also resets the value to false.  Since the function is called
from HandleRequest, the flag set by the API call will be ignored
by DecideCacheLookup.