proxy/http/HttpTransact.cc
@@ -5886,7 +5886,6 @@ HttpTransact::is_request_cache_lookupable(State* s)
   }
 
   if (s->api_skip_cache_lookup) {
-    s->api_skip_cache_lookup = false;
     return false;
   }
   // Even with "no-cache" directive, we want to do a cache lookup
